Tue Oct 15 10:07:02 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/prepare_query.c:
	- use ' to quote strings (work on Sybase and mssql)

Tue Oct 15 00:11:15 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in src/pool/member.c:
	- Set appname and hostname properly for the pool server.

Mon Oct 14 23:44:58 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/server/login.c:
	- Don't abuse BUFSIZ.

Mon Oct 14 23:14:43 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in:
	- Check for gethostbyname_r() in libd4r (for AIX).

Mon Oct 14 21:12:21 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in:
	- Warn about anavailable bigint only if we really don't have
	  64-bit integers at all.

Mon Oct 14 23:02:03 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/mem.c:
	- add some documentation
	- remove unused field from tds_config
	- sorted field of tds_login like tds_config

Mon Oct 14 21:26:55 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/Makefile.am: fix make dist problem

Mon Oct 14 21:08:44 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix error on PHP

Mon Oct 14 11:35:37 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h src/dblib/bcp.c src/dblib/dblib.c src/tds/query.c:
	- Implement a convenience function tds_submit_queryf() to
	  format a query and send to the dataserver.
	- Use tds_submit_queryf() in a few places to avoid static
	  buffer overruns.
	- Check return codes from query submission in dblib bcp functions.
	- Above change revealed that src/dblib/unittests/t0016.c has been
	  silently failing for some time.  Fully process result set from
	  table column inquiry query, so that the next query doesn't fail
	  (starting new query with results pending).

Mon Oct 14 09:35:35 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/des.h include/md4.h src/tds/challenge.c src/tds/des.c
	  src/tds/iconv.c src/tds/md4.c src/tds/numeric.c src/tds/write.c: